--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gray-matter": "^4.0.2",
     "highcharts": "^9.3.3",
     "highcharts-react-official": "^3.1.0",
+    "next-images": "^1.8.5",
     "next-mdx-remote": "^2.1.3",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
