added a few more directories to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@
 
 # testing
 /coverage
+
+#Adding blog elements to gitignore until further notice
 pages/blog/
+/_blog-posts
+pages/admin.tsx
 
 # next.js
 /.next/
