--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mdx-js/loader": "^0.15.4",
     "@next/bundle-analyzer": "^13.4.19",
     "@next/mdx": "^10.0.7",
+    "@vercel/analytics": "^1.0.2",
+    "analytics": "github:vercel/analytics",
     "axios": "^0.21.1",
     "gray-matter": "^4.0.2",
     "highcharts": "^9.3.3",
